@@ -114,17 +114,17 @@ public class HiveTestUDFImpls {
         case BOOLEAN:
           return ((BooleanObjectInspector)argumentOI).get(input) ? Boolean.TRUE : Boolean.FALSE;
         case BYTE:
-          return new Byte(((ByteObjectInspector)argumentOI).get(input));
+          return Byte.valueOf(((ByteObjectInspector)argumentOI).get(input));
         case SHORT:
-          return new Short(((ShortObjectInspector)argumentOI).get(input));
+          return Short.valueOf(((ShortObjectInspector)argumentOI).get(input));
         case INT:
-          return new Integer(((IntObjectInspector)argumentOI).get(input));
+          return Integer.valueOf(((IntObjectInspector)argumentOI).get(input));
         case LONG:
-          return new Long(((LongObjectInspector)argumentOI).get(input));
+          return Long.valueOf(((LongObjectInspector)argumentOI).get(input));
         case FLOAT:
-          return new Float(((FloatObjectInspector)argumentOI).get(input));
+          return Float.valueOf(((FloatObjectInspector)argumentOI).get(input));
         case DOUBLE:
-          return new Double(((DoubleObjectInspector)argumentOI).get(input));
+          return Double.valueOf(((DoubleObjectInspector)argumentOI).get(input));
         case STRING:
           return PrimitiveObjectInspectorUtils.getString(input, (StringObjectInspector)argumentOI);
         case BINARY:
